gcc/testsuite/gdc.test/fail_compilation/fail9613.d
// PREMUTE_ARGS:

void main()
{
    auto x = const byte.init;
}
